--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
   </head>
-  <body>
-    <div class="header">
+    <body>
       <h1>
         <a href="./index.html">Léa Belzunces</a>
       </h1>
-        <a href="./contact.html">contact</a>
-    </div>
-  </body>
+      <p>texte de présentation</p>
+      <a href="mailto:hello@leabelzunces.com">hello@leabelzunces.com</a>
+      <p>IG&#8239;:
+        <a href="https://instagram.com/leabzces" target="_blank">@leabzces</a>
+      </p>
+    </body>
 </html>
