--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="header">
-      <h1>
-        <a href="./index.html">Léa Belzunces</a>
-      </h1>
-        <a href="./contact.html">contact</a>
+    <div class="header col-md-12 col-lg-12">
+      <a href="./index.html" class="lien-header-gauche col-md-6 col-lg-6 col-xs-12 col-sm-6">Léa Belzunces</a>
+      <a href="./contact.html" class="lien-header-droite col-md-6 col-lg-6 col-xs-12 col-sm-6">contact</a>
     </div>
   </body>
 </html>
