--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-  </head>
-    <body>
-      <h1>
-        <a href="./index.html">Léa Belzunces</a>
-      </h1>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap-theme.min.css">
+</head>
+<body>
+  <div class="header col-md-12 col-lg-12">
+    <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
+    <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
+  </div>
+  <div class="container">
+    <div class="presentation">
       <p>texte de présentation</p>
+    </div>
+    <div class="contact">
       <a href="mailto:hello@leabelzunces.com">hello@leabelzunces.com</a>
-      <p>IG&#8239;:
+      <p class="txtplusgros">IG&#8239;:
         <a href="https://instagram.com/leabzces" target="_blank">@leabzces</a>
       </p>
-    </body>
+    </div>
+  </div>
+</body>
 </html>
