page  contact + presentation

--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,18 @@
     <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
     <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
   </div>
-  <div class="container">
-    <div class="presentation">
-      <p>texte de présentation</p>
-    </div>
-    <div class="contact">
-      <a href="mailto:hello@leabelzunces.com">hello@leabelzunces.com</a>
-      <p class="txtplusgros">IG&#8239;:
-        <a href="https://instagram.com/leabzces" target="_blank">@leabzces</a>
-      </p>
+  <div class="container col-md-12 col-lg-12 col-sm-12 col-xs-12">
+    <div class="row">
+      <div class="presentation col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p>After a two-year vocational degree in space design at Olivier de Serres, I have graduated a multidisciplinary master degree with highest honour, studying graphic design in Rennes. I worked for a year on my diploma project entitled “In the shadow of your data” focusing on this main issue: How can the graphic designer help web users to become e-aware users of their own digital data? I have created several devices which allow people to know more about their data being collected and how to manage them easier in order to limit the collect.
+        </p>
+      </div>
+      <div class="contact col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <a href="mailto:hello@leabelzunces.com">hello@leabelzunces.com</a>
+        <p class="txtplusgros">IG&#8239;:
+          <a href="https://instagram.com/leabzces" target="_blank">@leabzces</a>
+        </p>
+      </div>
     </div>
   </div>
 </body>
