home page + contact ok

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   </head>
   <body>
     <div class="header col-md-12 col-lg-12">
-      <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
-      <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
+      <div class="lien-index">
+        <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
+      </div>
+      <div class="lien-contact">
+        <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
+      </div>
     </div>
+    <img src="./images/E1.jpg" alt="Flowers in Chania">
+    <img src="./images/E2.jpg" alt="Flowers in Chania">
+    <img src="./images/E3.jpg" alt="Flowers in Chania">
   </body>
 </html>
