--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,13 @@
   <link rel="stylesheet" href="./bootstrap/css/bootstrap-theme.min.css">
 </head>
 <body>
-  <div class="header col-md-12 col-lg-12">
-    <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
-    <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
+  <div class="header-about col-md-12 col-lg-12">
+    <div class="lien-index">
+      <a href="./index.html" class="lien-header-gauche col-lg-6 col-md-6 col-sm-6 col-xs-12">Léa Belzunces</a>
+    </div>
+    <div class="lien-contact">
+      <a href="./contact.html" class="lien-header-droite col-lg-6 col-md-6 col-sm-6 col-xs-12">contact</a>
+    </div>
   </div>
   <div class="container col-md-12 col-lg-12 col-sm-12 col-xs-12">
     <div class="row">
